* UTIL type=address 'filter=(ip.count > 200)' now also working for address-groups
* UTIL type=service | introduce actions=exporttoexcel:file.html port.count | filter=(port.count ><= VALUE)
* UTIL type=address improve: 'actions=description-Replace-Character:$$comma$$word1'

BUGFIX:

GENERAL:


2.0.41 (20220512)
UTILS:
* UTIL type=address-/service-merger | export also skipped objects
* UTIL type=address actions=exportToExcel:FILE.html,resolveIP - improvement for dynamic AddressGroup
* UTIL type=xml-issue | extend for SecRule from/to duplicate search and readonly template-stack

BUGFIX;
* UTIL type=ALL-MERGER | bugfix for argument outputformatset - display objectname if delete

GENERAL:


2.0.40 (20220509)
UTILS:
* UTIL type=playbook | introduce argument validation
* class AddressGroup - dynamic Address Group with filter; every kind of filter is supported - revert warning
* class AddressGroup/ServiceGroup/pan_php_framework - improvement for stdout
* UTIL type=service-merger | improvement to stdout - why an object is skipped {protocol/dport/sport}
* UTIL type=service | improvements to validate loop usage in ServiceGroup

BUGFIX:
* UTIL type=tag | bugfix to support correctly tag name with characters '(' and ')'  - benefit for dynamic address group filter
* UTIL type=playbook | bugfix regarding supported arguments
* class PanoramaConf | bugfix for reading custom region objects on shared level
* class PANConf | bugfix for argument loadpanoramapushedconfig
* UTIL type=device actions=display-shadowrule - bugfix for none declared variable
* UTIL type=device | actions=display-shadowrule - bugfix to display rule owner
* UTIL type=device actions=display-shadowrule - bugfix
* UTIL ServiceStore | bugfix if serviceGroup A has a ServiceGroup B as member, which contains ServiceGroupA

GENERAL:


2.0.39 (20220428)
UTILS:
* UTIL type=html-merger | optimisation
* UTIL type=address | introduce actions=create-address-from-file:FILE.txt